没改完先同步下